--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       hairball run catnip eat the grass sniff.</p>
     <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy
       fur catnip scratched.</p>
+
+      <script src="js/1.js"></script>
   </main>
 </body>
 </html>
