added codewars js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy
       fur catnip scratched.</p>
 
-      <script src="js/1.js"></script>
+      <script src="js/index.js"></script>
   </main>
 </body>
 </html>
