--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <main>
   
     <a href="#footer">Jump to Bottom</a>
+    <p>View more
+      <a href="https://www.freecatphotoapp.com" target="_blank">cat photos</a>
+    </p>
   
     <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
       alt="A cute orange cat lying on its back.">
