--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
     <a href="#footer">Jump to Bottom</a>
     <p>View more
-      <a href="https://www.freecatphotoapp.com" target="_blank">cat photos</a>
+      <a href="#" target="_blank">cat photos</a>
     </p>
   
     <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
