--- a/index.html
+++ b/index.html
@@ -33,11 +33,20 @@
       internet for chasing red dot leave fur on owners clothes meow to be let out and mesmerizing birds leave fur on
       owners clothes or favor packaging over toy so purr for no reason. Meow to be let out play time intently sniff hand
       run outside as soon as door open yet destroy couch.</p>
-        <ul>
-          <li>milk</li>
-          <li>cheese</li>
-          <li>mause</li>
-        </ul>
+      <p>Things cats love:</p>
+      <ul>
+        <li>cat nip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
+      </ul>
+      
+      
+      <p>Top 3 things cats hate:</p>
+      <ol>
+        <li>Garfield</li>
+        <li>Sylvester</li>
+        <li>dogs</li>
+      </ol>
   
   </main>
   
