--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       owners clothes or favor packaging over toy so purr for no reason. Meow to be let out play time intently sniff hand
       run outside as soon as door open yet destroy couch.</p>
       <p>Things cats love:</p>
-      <input type="text" placeholder="cat photo URL">
+      <form action="https://www.freecatphotoapp.com/submit-cat-photo">
+        <input type="text" placeholder="cat photo URL">
+      </form>
       <ul>
         <li>cat nip</li>
         <li>laser pointers</li>
