--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <p>Things cats love:</p>
       <form action="https://www.freecatphotoapp.com/submit-cat-photo">
         <input type="text" placeholder="cat photo URL">
+        <button type="submit">Submit</button>
       </form>
       <ul>
         <li>cat nip</li>
