--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
       run outside as soon as door open yet destroy couch.</p>
       <p>Things cats love:</p>
       <form action="https://www.freecatphotoapp.com/submit-cat-photo">
-        <input type="text" placeholder="cat photo URL">
+        <input type="text" placeholder="cat photo URL" required>
         <button type="submit">Submit</button>
+          <label for="indoor">
+            <input id="indoor" type="radio" name="indoor-outdoor">Indoor
+          </label>
+          <label for="indoor">
+            <input id="indoor" type="radio" name="indoor-outdoor">outdoor
+          </label>
       </form>
       <ul>
         <li>cat nip</li>
