--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           <label for="indoor">
             <input id="indoor" type="radio" name="indoor-outdoor">outdoor
           </label>
+          <label for="loving"><input id="loving" type="checkbox" name="personality">a</label>
+          <label for="loving"><input id="loving" type="checkbox" name="personality">b</label>
+          <label for="loving"><input id="loving" type="checkbox" name="personality">c</label>
       </form>
       <ul>
         <li>cat nip</li>
